fixed layout issues with mobile header and sidebar

--- a/apps/gym/src/components/reusable/Header/HeaderDesktop/HeaderDesktop.module.css
+++ b/apps/gym/src/components/reusable/Header/HeaderDesktop/HeaderDesktop.module.css
@@ -14,7 +14,7 @@
   color: var(--dark-gray);
 }
 
-@media (width < 720px) {
+@media (width < 480px) {
   .container {
     display: none;
   }
