--- a/apps/gym/src/components/reusable/Header/HeaderMobile/HeaderMobile.module.css
+++ b/apps/gym/src/components/reusable/Header/HeaderMobile/HeaderMobile.module.css
@@ -1,8 +1,9 @@
 .container {
   display: flex;
+  height: 46px;
 }
 
-@media (width > 720px) {
+@media (width > 480px) {
   .container {
     display: none;
   }
