--- a/apps/gym/src/components/reusable/Sidebar/Sidebar.module.css
+++ b/apps/gym/src/components/reusable/Sidebar/Sidebar.module.css
@@ -26,7 +26,7 @@
   gap: 16px;
 }
 
-@media (width < 720px) {
+@media (width < 480px) {
   .container {
     display: none;
   }
